--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Personal site</title>
+        <style>
+            body{
+                background-color:aqua;
+            }
+            hr{
+                background-color: rgb(255, 255, 255);
+                border-style: none;
+                height: 2px;
+                width: 40%;
+            }
+        </style>
     </head> 
     <body>
         <table cellspacing="20px">
@@ -10,7 +21,8 @@
                 <td><img src="img/IMG3.jpg" alt="IMG1"></td>
                 <td><h1>Babatunde Esther Oluwatobiloba</h1>
                     <p><em><strong> A Graduate, </strong> of computer science.</em></p>
-                    <p>I am a graduate of Computer science. My discipline focuses on website development using HTML, CSS, PHP and MYSQL.</p>
+                    <p>I am a graduate of Computer science. My discipline focuses on website development using HTML, CSS and MYSQL.</p>
+                    <p>I &#128525; garri, groundnut and sugar</p>
                 </td>
             </tr>
         </table>
