--- a/hobbies.html
+++ b/hobbies.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hobbies</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h3>My Hobbies</h3>
