--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <table cellspacing="20px">
             <tr>
-                <td><img src="img/IMG1.jpg" alt="IMG1"></td>
+                <td><img src="img/IMG1.jpg" class="circular" alt="IMG1"></td>
                 <td>
                     <h1>Babatunde Esther Oluwatobiloba</h1>
                     <p><em><strong> A Graduate, </strong> of computer science.</em></p>
@@ -81,14 +81,6 @@
                 </td>
             </tr>
         </table>
-
-
-
-
-
-
-
-
 
         <hr>
         <p><a href="hobbies.html">My Hobbies</a></p>
